menu alignment fixes

--- a/src/theme/adapt-contrib-vanilla/less/src/boxmenu.less
+++ b/src/theme/adapt-contrib-vanilla/less/src/boxmenu.less
@@ -49,6 +49,12 @@
 
 	.menu-item {
 		margin: 0 auto 30px;
+		display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        min-height: 200px;
 
 		&.nth-child-even{
 			.menu-item-inner{
